# SVGIZE

./: .gitignore  Cargo.toml  gen_images_png.sh  license  readme.md  rust-toolchain.toml
images/cfpb/: license
images/countries/: license
images/fruitses/: license
images/icoon mono/: license
images/maki/: license
images/map_icons/: license
images/musicplayer/: license
images/popular/: license
images/stuff/: license
images/veggies/: license
results/: license
src/: main.rs
test_images/: license.txt
