# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
cargo-features = ["profile-rustflags"]

[package]
name = "image_evo_filter"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
image = { version = "0.25.6", features = ["rayon", "default-formats", "nasm"] }
image-compare = "0.4.2"
imageproc = { version = "0.25.0", features = ["rayon"] }
rand = "0.9.2"
rand_xoshiro = "0.7.0"
rayon = "1.10.0"

[profile.release]
strip = "symbols"
opt-level = 3
lto = "fat"
codegen-units = 1
incremental = true

[profile.release.package."*"]
strip = "symbols"
opt-level = 3
codegen-units = 1
incremental = true