# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
cargo-features = ["profile-rustflags"]

[package]
name = "image_evo_filter"
version = "1.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = [
    "unicode",
    "default",
    "wrap_help",
    "color",
    "std",
    "derive",
] }
colored = "3.0.0"
image = { version = "0.25.6", features = [
    "rayon",
    "nasm",
    "jpeg",
    "png",
    "webp",
    "avif",
    "bmp",
    "tiff",
    "qoi",
], default-features = false }
image-compare = "0.4.2"
imageproc = { version = "0.25.0", features = ["rayon"] }
num_cpus = "1.17.0"
rand = { version = "0.9.2", default-features = false, features = [
    "std",
    "simd_support",
    "os_rng"
] }
rand_xoshiro = "0.7.0"
rayon = "1.10.0"
regex = { version = "1.11.1", features = ["unstable"] }
walkdir = "2.5.0"
xmltree = "0.11.0"

[profile.release]
strip = "symbols"
opt-level = 3
lto = "fat"
codegen-units = 1
incremental = true

[profile.release.package."*"]
strip = "symbols"
opt-level = 3
codegen-units = 1
incremental = true
